@@ -135,6 +135,7 @@ div.errorExplanation h2, div#error h2 {
 #footer {
   position: fixed;
   bottom: 0;
+  left: 0;
   background: #ddd;
   width: 100%;
   padding: 10px 0;
@@ -285,19 +286,17 @@ li#admin a {
 
 #bookmarks ul, ul.slist {
   list-style: none;
-}
-
-#bookmarks li, ul.slist li {
-  border-bottom: 1px solid #ccc;
-  border-top: 1px solid #fff;
+  line-height: 100%;
 }
 
 #bookmarks ul li a, ul.slist li a {
   background: url(../images/app/icons/box-small.png) 0 50% no-repeat;
-  padding: 5px 5px 5px 20px;
+  padding: 8px 5px 8px 20px;
   color: #333;
   text-shadow: 2px 2px #fff;
   display: block;
+  border-bottom: 1px solid #ccc;
+  border-top: 1px solid #fff;
 }
 
 #bookmarks li a:hover, ul.slist a:hover {
